force-app/main/default/objects/LLC_BI__Deposit__c/LLC_BI__Deposit__c.object-meta.xml
<CustomObject>
    <description>The Deposit Object is used to track details of a deposit within nCino</description>
    <label>Deposit</label>
    <nameField>
        <label>Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>