force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the interest rate of the deposit account. If an initial rate (for example, a teaser) applies, then this is the rate that is in effect after the expiration of the teaser period.</description>
    <inlineHelpText>The interest rate of the deposit account. If an initial rate (i.e. a teaser) applies this is the rate that is in effect after the expiration of the teaser period.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>