force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <description>This field is required and is collected during the New Deposit Workflow. This field is a picklist that allows the user to specify what product type the deposit is associated with.</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Product_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Checking</fullName>
                <default>true</default>
                <label>Consumer Checking</label>
            </value>
            <value>
                <fullName>Consumer Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
            <value>
                <fullName>Business Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>