force-app/main/default/objects/LLC_BI__Deposit__c/fields/WKDDP__Denial_Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Denial_Notice_Type__c</fullName>
    <description>The user or system populates this optional picklist that specifies the denial notice for the account holder.</description>
    <inlineHelpText>Select the account holder&apos;s denial reason from the picklist.</inlineHelpText>
    <label>Denial Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unable to Approve</fullName>
            </value>
            <value>
                <fullName>Partial Approval</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>