force-app/main/default/objects/LLC_BI__Deposit__c/fields/WKDDP__Joint_Owners_Have_ROS__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Joint_Owners_Have_ROS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field to indicate that joint owners have rights of suvivorship between them. By default, it is false.</description>
    <inlineHelpText>Select this field if joint owners have rights of survivorship.</inlineHelpText>
    <label>Joint Owners have ROS</label>
    <type>Checkbox</type>
</CustomField>