force-app/main/default/objects/LLC_BI__Deposit__c/fields/WKDDP__MultiParty_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__MultiParty_Disclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this boolean field to determine if the Texas Multiple Party Account Disclosure document applies. This is required for banks and optional for credit unions. By default, it is false.</description>
    <inlineHelpText>Select this checkbox if the Texas Multiple Party Account Disclosure document applies.</inlineHelpText>
    <label>MultiParty Disclosure</label>
    <type>Checkbox</type>
</CustomField>