force-app/main/default/objects/LLC_BI__Deposit__c/fields/WKDDP__Multiple_Party_Terms_Change__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Multiple_Party_Terms_Change__c</fullName>
    <description>Users select Single Party or All Parties from this optional picklist to determine a single person can or all parties must change the terms of a multiple party agreement.</description>
    <inlineHelpText>Select Single Party or All Parties to determine if a single party can or all parties must change the terms of a multiple party agreement.</inlineHelpText>
    <label>Multiple Party Terms Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Party</fullName>
            </value>
            <value>
                <fullName>All Parties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>