force-app/main/default/objects/LLC_BI__Deposit__c/fields/WKDDP__Temporary_Account_Agreement_Indictor__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Temporary_Account_Agreement_Indictor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field when a temporary account agreement is used for the account. By default, it is false.</description>
    <inlineHelpText>Select the checkbox when a temporary account agreement is used for the account.</inlineHelpText>
    <label>Temporary Account Agreement Indictor</label>
    <type>Checkbox</type>
</CustomField>