force-app/main/default/objects/LLC_BI__Deposit__c/listViews/Consumer_Deposits.listView-meta.xml
<ListView>
    <fullName>Consumer_Deposits</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Stage__c</columns>
    <columns>LLC_BI__Status__c</columns>
    <columns>LLC_BI__Product__c</columns>
    <columns>LLC_BI__Amount__c</columns>
    <columns>LLC_BI__Account__c</columns>
    <columns>LLC_BI__Account_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LLC_BI__Product_Type__c</field>
        <operation>equals</operation>
        <value>Consumer Checking,Consumer Savings</value>
    </filters>
    <label>Consumer Deposits</label>
</ListView>