force-app/main/default/objects/LLC_BI__Deposit__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Account_Number__c</columns>
    <columns>LLC_BI__Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>